fix(docs-infra): set `th`/`td` to proper width
Previously, the tables on the event page were misaligned. This commit
fixes this by setting the width of all `td`'s and `th`'s.

--- a/aio/src/styles/2-modules/_table.scss
+++ b/aio/src/styles/2-modules/_table.scss
@@ -113,3 +113,15 @@ table {
     }
   }
 }
+
+article[class="events-container"] {
+  & table > tbody > 
+  
+  tr > th:first-child {
+    width: 15%;
+  }
+
+  tr > td:last-child {
+    width: 30%;
+  }
+}
